8342905: Thread.setContextClassloader from thread in FJP commonPool task no longer works after JDK-8327501 redux
Reviewed-by: sgehwolf, mbalao
Backport-of: 872ae1347198408ffd62559ca8c1a7420c4a8108